--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
+    "react-query": "^3.39.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.1",
     "socket.io-client": "^4.7.4",
