Add comprehensive test suite for PostgreSQL persistence

--- a/package.json
+++ b/package.json
@@ -13,15 +13,27 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:run": "jest --verbose"
+    "test:run": "jest --verbose",
+    "test:server": "cd server && npm test",
+    "test:server:watch": "cd server && npm run test:watch",
+    "test:server:coverage": "cd server && npm run test:coverage",
+    "test:all": "npm test && npm run test:server",
+    "server:dev": "cd server && tsx watch index.ts",
+    "server:build": "cd server && tsc",
+    "server:start": "cd server && node dist/index.js",
+    "server:setup": "cd server && npm install",
+    "db:setup": "psql -U postgres -c 'CREATE DATABASE IF NOT EXISTS fastgraph;' && psql -U postgres -d fastgraph -f server/database/schema.sql",
+    "db:reset": "psql -U postgres -c 'DROP DATABASE IF EXISTS fastgraph;' && npm run db:setup",
+    "dev:full": "concurrently \"npm run server:dev\" \"npm run dev\"",
+    "setup": "npm install && mkdir -p server/logs && echo 'Setup complete! Create server/.env file using server/config.env.txt as template'"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.18",
-    "@mui/material": "^5.14.18",
-    "@reduxjs/toolkit": "^1.9.7",
-    "axios": "^1.6.2",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
     "date-fns": "^2.30.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -29,32 +41,53 @@
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
-    "react-redux": "^8.1.3",
-    "react-router-dom": "^6.20.1",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.1",
     "socket.io-client": "^4.7.4",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "express": "^4.18.2",
+    "@types/express": "^4.17.21",
+    "pg": "^8.11.3",
+    "@types/pg": "^8.10.9",
+    "dotenv": "^16.4.1",
+    "cors": "^2.8.5",
+    "@types/cors": "^2.8.17",
+    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "winston": "^3.11.0",
+    "node-cron": "^3.0.3",
+    "@types/node-cron": "^3.0.11",
+    "concurrently": "^8.2.2",
+    "tsx": "^4.7.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
-    "@types/jest": "^30.0.0",
+    "@types/jest": "^29.5.12",
     "@types/lodash": "^4.14.202",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
+    "@types/react": "^18.2.56",
+    "@types/react-dom": "^18.2.19",
     "@types/uuid": "^9.0.7",
-    "@vitejs/plugin-react": "^4.1.1",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react-swc": "^3.11.0",
     "@vitest/coverage-v8": "^1.1.0",
     "@vitest/ui": "^1.1.0",
-    "jest": "^30.0.5",
-    "jest-environment-jsdom": "^30.0.5",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^24.0.0",
-    "msw": "^2.0.11",
-    "ts-jest": "^29.4.0",
+    "msw": "^2.2.1",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.2.2",
     "undici": "^7.12.0",
-    "vite": "^4.5.0",
-    "vitest": "^1.1.0",
+    "vite": "^5.1.4",
+    "vitest": "^1.3.1",
     "whatwg-fetch": "^3.6.20"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
