Remove persistence logic from BFF

--- a/package.json
+++ b/package.json
@@ -13,19 +13,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:run": "jest --verbose",
-    "test:server": "cd server && npm test",
-    "test:server:watch": "cd server && npm run test:watch",
-    "test:server:coverage": "cd server && npm run test:coverage",
-    "test:all": "npm test && npm run test:server",
-    "server:dev": "cd server && tsx watch index.ts",
-    "server:build": "cd server && tsc",
-    "server:start": "cd server && node dist/index.js",
-    "server:setup": "cd server && npm install",
-    "db:setup": "psql -U postgres -c 'CREATE DATABASE IF NOT EXISTS fastgraph;' && psql -U postgres -d fastgraph -f server/database/schema.sql",
-    "db:reset": "psql -U postgres -c 'DROP DATABASE IF EXISTS fastgraph;' && npm run db:setup",
-    "dev:full": "concurrently \"npm run server:dev\" \"npm run dev\"",
-    "setup": "npm install && mkdir -p server/logs && echo 'Setup complete! Create server/.env file using server/config.env.txt as template'"
+    "test:run": "jest --verbose"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -44,22 +32,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "socket.io-client": "^4.7.4",
-    "uuid": "^9.0.1",
-    "express": "^4.18.2",
-    "@types/express": "^4.17.21",
-    "pg": "^8.11.3",
-    "@types/pg": "^8.10.9",
-    "dotenv": "^16.4.1",
-    "cors": "^2.8.5",
-    "@types/cors": "^2.8.17",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
-    "express-validator": "^7.0.1",
-    "winston": "^3.11.0",
-    "node-cron": "^3.0.3",
-    "@types/node-cron": "^3.0.11",
-    "concurrently": "^8.2.2",
-    "tsx": "^4.7.1"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.2.0",
