--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
+    "reactflow": "^11.11.4",
     "socket.io-client": "^4.7.4",
     "uuid": "^9.0.1"
   },
@@ -42,7 +43,7 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.14.202",
-    "@types/react": "^18.2.56",
+    "@types/react": "^18.3.23",
     "@types/react-dom": "^18.2.19",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
